2007-10-22 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp: Doc-comment fixes.

2007-10-19 Braden McDaniel  <braden@endoframe.com>

	Moved parse test input to persistent files (instead of files
	generated by the test machinery).

	* tests/Makefile.am (EXTRA_DIST): Add test files to the
	distribution.
	* tests/testsuite.at: Refer to the test files rather than using
	AT_DATA.
	* tests/vrml97/bad/proto-eventin-conflict.wrl
	* tests/vrml97/bad/proto-eventout-conflict.wrl
	* tests/vrml97/bad/unrecognized-node.wrl
	* tests/vrml97/bad/use-def-in-different-proto-default-value.wrl
	* tests/vrml97/good/def-use-in-proto-default-value.wrl
	* tests/vrml97/good/line-number.wrl
	* tests/vrml97/good/proto-containment-2-deep.wrl
	* tests/vrml97/good/proto-containment-trivial.wrl
	* tests/vrml97/good/proto-field-is-proto.wrl
	* tests/vrml97/good/proto-impl-exposedfield-event-is.wrl
	* tests/vrml97/good/proto-in-proto-default-value.wrl
	* tests/vrml97/good/route-referencing-current-node.wrl
	* tests/vrml97/good/self-referential-script-in-proto.wrl
	* tests/vrml97/good/self-referential-script.wrl
	* tests/vrml97/good/unimplemented-externproto.wrl
	* tests/vrml97/good/unrecognized-externproto.wrl
	* tests/x3dv/bad/unsupported-component-level.x3dv
	* tests/x3dv/good/core+core2.x3dv
	* tests/x3dv/good/minimal-full.x3dv
	* tests/x3dv/good/minimal-immersive.x3dv
	* tests/x3dv/good/minimal-interactive.x3dv
	* tests/x3dv/good/minimal-interchange.x3dv
	* tests/x3dv/good/minimal-mpeg4.x3dv
	* tests/x3dv/good/minimal.x3dv
	* tests/x3dv/good/x3d+vrml97-component.x3dv

2007-10-13 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am (DOCUMENTED_SOURCE_FILES): Added
	read_write_mutex source files.

2007-10-11 Braden McDaniel  <braden@endoframe.com>

	Improved resiliency of create_file_url to getcwd failures.

	* src/libopenvrml/openvrml/browser.cpp
	(create_file_url(const uri &)): Throw std::runtime_error if getcwd